styles/globals.css
/* Google fonts

font-family: 'Fira Mono', monospace;
font-family: 'Inter', sans-serif;
font-family: 'Playfair Display', serif;
*/

@font-face {
  font-family: 'Spacetime';
  src: url(../assets/fonts/spacetime-regular.ttf);
}

.light {
  --primary: #339974;
  --secondary: #2b694d;
  --accent: #8cb6bb;

  --text: #34373e;
  --text-shadow: 0 0 1px #fff;
  --box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
  --font-family-heading: "Inter", sans-serif;
  --font-family-heading-accent: "Playfair Display", serif;

  --body: #fafafa;
  --grey: #454545;
  --lightgrey: #8f8182;
  --faint: rgba(0, 0, 0, 0.1);
  --muted: rgba(0, 0, 0, 0.4);
  --caption: #8f8182;
  --text--header: var(--text);

  --success: #63aa64;
  --warning: #e09a2c;
  --error: #f44336;
  --info: #2196f3;

  --border: 1px solid var(--faint);
  --border-radius: 20px;
  --border-radius-small: 10px;
  --margin: 1rem 3rem;
  --padding: 1rem 3rem;
  --padding-small: 0.5rem 1rem;
  --padding-xtra-small: 0.25rem 0.5rem;
}

.dark {
  --primary: #86dabb;
  --secondary: #6fb998;
  --accent: #2299a8;

  --text: #fafafa;
  --text-shadow: 0 0 1px #000;
  --box-shadow:  rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
  --font-family-heading: "Inter", sans-serif;
  --font-family-heading-accent: "Playfair Display", serif;

  --body: #34373e;
  --grey: #b3b3b3;
  --lightgrey: #8f8182;
  --faint: rgba(255, 255, 255, 0.1);
  --muted: rgba(255, 255, 255, 0.3);
  --caption: #8f8182;
  --text--header: var(--text);

  --success: #63aa64;
  --warning: #e09a2c;
  --error: #f44336;
  --info: #2196f3;

  --border: 1px solid var(--faint);
  --border-radius: 20px;
  --border-radius-small: 10px;
  --margin: 1rem 3rem;
  --padding: 1rem 3rem;
  --padding-small: 0.5rem 1rem;
  --padding-xtra-small: 0.25rem 0.5rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  transition: ease-out 0.05s;
}

html {
  background-color: var(--body);
  color: var(--text);
  font-size: 1rem;
  line-height: 1.6;
  font-family: "Inter", sans-serif;
}

body {
  height: 100%;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
@media screen and (max-width: 375px) {
  body {
    display: block;
    justify-content: center;
  }
}

section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 10rem;
}

.section-content {
  max-width: 1200px;
  margin: 0 auto;
}

@media screen and (max-width: 768px) {
  /* Adjust padding and font size for smaller screens */
  section {
    padding: 10px;
  }
  
  /* Modify the layout for smaller screens */
  .section-content {
    padding: 10px;
  }
}


header {
  top: 0;
  width: 100%;
  position: absolute;
  display: flex;
  justify-content: center;
}

main {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 5rem;
  gap: 2rem;  
  }

  @media screen and (max-width: 1024px) {
    main {
      padding-top: 2rem;
    }
  }

  @media screen and (min-width: 1024px) {
    main {
      padding-top: 10rem;
    }
  }

a {
  text-decoration: none;
  color: var(--primary);
  font-weight: 600;
}

a:hover {
  color: var(--secondary);
  transition: ease-in-out 0.2s;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--text--header);
}

h4,
h5 {
  font-weight: 600;
  font-size: 1.5rem;
}

h1 {
  font-size: 3.5rem;
  margin-bottom: 0rem;
  font-family: "Inter", sans-serif;
  text-align: center;

  @media screen and (max-width: 750px) {
    font-size: 2rem;
  }
}

h2 {
  padding: 0.25em;
  font-size: 2.5rem;
  margin-top: 0;
  margin-bottom: 2rem;

  @media screen and (max-width: 750px) {
    font-size: 2rem;
  }
}

h3 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

p {
  margin-bottom: 1rem;

  @media screen and (max-width: 768px) {
    padding: 0 2.5rem;
  }
}

p a {
  color: var(--text);
  border-bottom: 1px solid var(--muted);
}

li {
    padding: 0 2.5rem;
}

li {
  margin-bottom: 0.5rem;
}

p,
li {
  opacity: 0.9;
}

img,
image {
  border-radius: 15px;
}

.head3 {
  margin-left: 10px;
  list-style-type: circle;
}
.head4 {
  margin-left: 20px;
  list-style-type: square;
}

kbd,
.kbd {
  display: inline-block;
  padding: 0.17em 0.6em 0.17em 0.4em;
  margin: 0 0.2em;
  position: relative;
  top: -0.2em;

  color: #333;
  font: normal 0.8em/1 sans-serif;
  text-decoration: none;
  box-shadow: inset 0 -0.2em 0.12em -0.15em rgba(255, 255, 255, 0.7);
  cursor: default;
  border-radius: 0.3em;

  background: -ms-radial-gradient(top, ellipse cover, #ddd 0%, white 100%);
  background: radial-gradient(ellipse at top right, #ddd 0%, white 100%);
}

kbd::before,
.kbd::before,
kbd::after,
.kbd::after {
  content: "";
  position: absolute;
  left: -0.17em;
  right: -0.17em;
  top: 0.1em;
  bottom: -0.4em;
  border-radius: 0.4em;
}

/*white highlight*/
kbd::before,
.kbd::before {
  z-index: -1;

  border: 1px solid gray;
  background: #a8a8a8;
  background: radial-gradient(
    circle 3em at -1.7em 0,
    white 0%,
    white 70%,
    rgba(255, 255, 255, 0) 80%
  );
}

kbd::after,
.kbd::after {
  z-index: -2;

  background: #a8a8a8;
  background: radial-gradient(
    ellipse 1em 1.7em at top right,
    #aaa 0%,
    #aaa 70%,
    #ccc 100%
  );
}

.kbd-down {
  top: 0em;
  box-shadow: inset 0 -0.2em 0.3em -0.1em rgba(200, 200, 200, 0.5);
}
.kbd-down::before,
.kbd-down::after {
  top: -0.1em;
  bottom: -0.2em;
}
.kbd-down::before {
  box-shadow: inset 0px 1px 6px 0px rgba(0, 0, 0, 1);
}

.head2 {
  margin-left: 10px;
  list-style-type: disc;
}
.head3 {
  margin-left: 30px;
  list-style-type: circle;
}

pre {
  padding: 1rem 2rem;
  background-color: var(--faint);
  border-radius: var(--border-radius);
}

/*  */
.skill-marquee {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  z-index: -99;
  display: flex;
  user-select: none;
  gap: 2rem;
  transform: skewY(-3deg);
  border-top: 3px solid var(--primary);
  border-bottom: 3px solid var(--primary);
  padding: 0.5rem 0;
}

.skill-marquee__inner {
  display: flex;
  flex-shrink: 0;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-around;
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  gap: 2rem;
  height: 100%;
  animation: marquee 25s linear infinite;
}

.skill-marquee__inner:hover {
  animation-play-state: paused;
}

.skill-marquee__inner:hover .skill-marquee__item {
  animation-play-state: paused;
}

.skill-marquee__item {
  max-width: clamp(20rem, 25vw, 25rem);
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 0 0 auto;
  width: 100%;
  height: 100%;
  font-size: 2rem;
  font-weight: 600;
  text-transform: uppercase;
  color: var(--text);
  opacity: 0.7;
}

@keyframes marquee {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-100%);
  }
}

@media (prefers-reduced-motion: reduce) {
  .skill-marquee {
    animation-play-state: paused;
  }
}

/*  */

.hider {
  overflow: hidden;
}

.sitename {
  transform: translate3d(0, 0, 0);
  animation: slide-up 2s ;
  margin-bottom: 2rem;
  color: var(--primary);
}

.sitename:hover {
  color: var(--accent);
}

@keyframes multiColorLetterHover {
  0% {
    color: var(--primary);
  }
  25% {
    color: var(--secondary);
  }
  50% {
    color: var(--tertiary);
  }
  75% {
    color: var(--quaternary);
  }
  100% {
    color: var(--primary);
  }
}

@keyframes slide-up { 
  0%{ transform: translate3d(0, 100%, 0); }
  100%{ transform: translate3d(0, 0, 0); }
}

/* containers  */

.pancake {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.pancake-child {
    flex: 1 1 275px;
    margin: 0.5rem;
}


/* cards */

.blog--article {
  padding: 1.2rem;
  width: 400px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid var(--faint);
  border-radius: var(--border-radius);
  text-align: center;
}

.blog-article > * {
  margin: 0 auto;
}

.blog--article:hover {
    cursor: pointer;
    background-color: var(--faint);
}

.image-wrapper {
    margin: 0 auto;
}

.blog--article__image {
    width: 100%;
    aspect-ratio: 1/1;
    object-fit: cover;
    border-radius: 15px;
    margin-bottom: 1rem;
}

.blog--article__date {
    font-size: 0.9rem;
    color: var(--muted);
    text-align: center;
}


.blog--article__title {
    color: var(--primary);
    padding: 1rem 0;
    font-size: 1.3rem;
    line-height: 1.2;
    font-weight: 600;
    height: 8rem;
    text-align: center;
}

.blog--article__title:hover {
    cursor: pointer;
    color: var(--accent);
}

.blog--article__description {
    margin: 0;
    font-size: 0.8rem;
    font-weight: 400;
    line-height: 1.2rem;
    color: var(--text);
}

@media (max-width: 768px) {

    .blog--article {
        max-width: 275px;
    }
    
    .blog--article__title {
        font-size: 1.3rem;
        margin-bottom: 0.5rem;
        height: 4rem;
    }

    .blog--article__description {
        font-size: 0.7rem;
        padding: 0;
    }
  }

  @media (min-width: 768px) {
    .blog--article {
    width: 400px;
    height: fit-content;
    margin-bottom: 1rem;
    }

    .blog--article__title {
      font-size: 2rem;
    }
  }


/* TABS  */
.tabs {
    border: 1px solid var(--grey);
    padding: 2rem;
}



/*  ANIMATIONS  */
@keyframes fadeInFromBelow {
    0% {
      opacity: 0;
      transform: translateY(2rem);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
}
}

.fadeIn--below {
    animation: fadeInFromBelow 1s ease-in-out;
}

